force-app/main/default/objects/API_Asset_Code_Master_Data__c/API_Asset_Code_Master_Data__c.object-meta.xml
<CustomObject>
    <label>Master Asset Code</label>
    <nameField>
        <label>API Asset Code Master Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Asset Code</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>