force-app/main/default/objects/API_Asset_Code_Master_Data__c/fields/active__c.field-meta.xml
<CustomField>
    <fullName>active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>active</label>
    <type>Checkbox</type>
</CustomField>