force-app/main/default/objects/API_Asset_Code_Master_Data__c/fields/asset_parent_code__c.field-meta.xml
<CustomField>
    <fullName>asset_parent_code__c</fullName>
    <label>asset_parent_code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>