force-app/main/default/objects/API_Asset_Code_Master_Data__c/fields/brand_description__c.field-meta.xml
<CustomField>
    <fullName>brand_description__c</fullName>
    <label>brand_description</label>
    <type>TextArea</type>
</CustomField>