force-app/main/default/objects/API_Asset_Code_Master_Data__c/fields/commercial_description__c.field-meta.xml
<CustomField>
    <fullName>commercial_description__c</fullName>
    <label>commercial_description</label>
    <type>TextArea</type>
</CustomField>