force-app/main/default/objects/API_Asset_Code_Master_Data__c/fields/cylinder__c.field-meta.xml
<CustomField>
    <fullName>cylinder__c</fullName>
    <label>cylinder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>