force-app/main/default/objects/API_Asset_Code_Master_Data__c/fields/door__c.field-meta.xml
<CustomField>
    <fullName>door__c</fullName>
    <label>door</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>