force-app/main/default/objects/API_Asset_Code_Master_Data__c/fields/is_final_level__c.field-meta.xml
<CustomField>
    <fullName>is_final_level__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is_final_level</label>
    <type>Checkbox</type>
</CustomField>