force-app/main/default/objects/API_Asset_Code_Master_Data__c/fields/manufacturing_country_id__c.field-meta.xml
<CustomField>
    <fullName>manufacturing_country_id__c</fullName>
    <label>manufacturing_country_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>