force-app/main/default/objects/API_Asset_Code_Master_Data__c/fields/model_description__c.field-meta.xml
<CustomField>
    <fullName>model_description__c</fullName>
    <label>model_description</label>
    <type>TextArea</type>
</CustomField>