force-app/main/default/objects/API_Asset_Code_Master_Data__c/fields/price_on_the_road_flag__c.field-meta.xml
<CustomField>
    <fullName>price_on_the_road_flag__c</fullName>
    <label>price_on_the_road_flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>