force-app/main/default/objects/API_Asset_Code_Master_Data__c/fields/rank_number__c.field-meta.xml
<CustomField>
    <fullName>rank_number__c</fullName>
    <label>rank_number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>