force-app/main/default/objects/API_Asset_Code_Master_Data__c/fields/resale_value__c.field-meta.xml
<CustomField>
    <fullName>resale_value__c</fullName>
    <label>resale_value</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>