force-app/main/default/objects/API_Asset_Code_Master_Data__c/fields/type_group__c.field-meta.xml
<CustomField>
    <fullName>type_group__c</fullName>
    <label>type_group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>