force-app/main/default/objects/API_Asset_Code_Master_Data__c/fields/vehicle_type_name__c.field-meta.xml
<CustomField>
    <fullName>vehicle_type_name__c</fullName>
    <label>vehicle_type_name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>